--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ p {
     max-width: 600px;
 }
 
-button.talkBTN {
+button.BTN {
     width: 150px;
     height: 50px;
     border-radius: 25px;
@@ -148,7 +148,7 @@ button.talkBTN {
     font-size: 0.9em;
 }
 
-button.talkBTN:hover {
+button.BTN:hover {
     background-color: #5a0fc8;
     transform: scale(1.05);
     box-shadow: 0 6px 12px rgba(102, 16, 242, 0.7);
@@ -175,7 +175,7 @@ button.talkBTN:hover {
     overflow: hidden;
     box-shadow: 0 8px 20px rgba(102, 16, 242, 0.8);
     position: relative;
-    background-color: #6610f2;
+    background-color: var(--primary-color);
     flex-shrink: 0;
 }
 
