fix typing and shadow box

--- a/style.css
+++ b/style.css
@@ -173,7 +173,6 @@ button.BTN:hover {
     height: 250px;
     border-radius: 50%;
     overflow: hidden;
-    box-shadow: 0 8px 20px rgba(102, 16, 242, 0.8);
     position: relative;
     background-color: var(--primary-color);
     flex-shrink: 0;
@@ -266,11 +265,11 @@ button.BTN:hover {
     background-color: var(--primary-color);
     left: 0;
     width: 0;
-    transition: width 1s ease;
+    transition: width 5s ease-in-out;
 }
 
 .skill span.prc100::after {
-    width: 100%;
+    width: var(--after-width);
 }
 
 .skill span.prc90::after {
@@ -291,7 +290,12 @@ button.BTN:hover {
     max-width: 500px;
     width: 100%;
 }
-
+input,i, .image,textarea, footer{
+    box-shadow: 0 8px 20px rgba(102, 16, 242, 0.8);
+}
+header{
+    box-shadow: 0 8px 20px rgba(97, 24, 215, 0.361);
+}
 footer {
     display: flex;
     justify-content: center;
@@ -299,7 +303,6 @@ footer {
     background-color: var(--scd-bg);
     text-align: center;
 }
-
 @media (max-width: 1024px) {
     header {
         padding: 0.5rem 1rem;
